force-app/main/default/objects/Permission_By_RecordType__c/Permission_By_RecordType__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Hierarchy of which type of permission(User, Profile, PermissionSet) is considered is determined by Permissions By RecordType Hierarchy custom metadata. If there&apos;s multiple permission sets assigned to a person, then it acts like OOB salesforce; If any of them grant permission, then it has permission.</description>
    <label>Permission By RecordType</label>
</CustomObject>