force-app/main/default/objects/Permission_By_RecordType__c/fields/Delete_Access__c.field-meta.xml
<CustomField>
    <fullName>Delete_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Access</label>
    <type>Checkbox</type>
</CustomField>