force-app/main/default/objects/Permission_By_RecordType__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Profile, PermissionSet, User</description>
    <inlineHelpText>Profile, PermissionSet, User</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>