force-app/main/default/objects/Permission_By_RecordType__c/listViews/Settings.listView-meta.xml
<ListView>
    <fullName>Settings</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Value__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Record_Type_API_Name__c</columns>
    <columns>Edit_Access__c</columns>
    <columns>Delete_Access__c</columns>
    <filterScope>Everything</filterScope>
    <label>Settings</label>
    <language>en_US</language>
</ListView>